ci: fix echo workflow

--- a/.github/workflows/echo.yml
+++ b/.github/workflows/echo.yml
@@ -5,5 +5,5 @@ jobs:
   published:
     runs-on: ubuntu-latest
     steps:
-      - run: "echo: 'event type: ${{ github.event.action }}'"
-      - run: "echo: 'new release: ${{ github.event.client_payload.release.tag_name }}'"
+      - run: "echo 'event type: ${{ github.event.action }}'"
+      - run: "echo 'new release: ${{ github.event.client_payload.release.tag_name }}'"
