build(package): simplify repository fields
created using @octoherd and https://github.com/gr2m/octoherd-script-normalize-package-repository-field

--- a/package.json
+++ b/package.json
@@ -8,7 +8,7 @@
     "build": "ncc build index.js -o dist",
     "test": "tap --100 test/*/test.js"
   },
-  "repository": "https://github.com/gr2m/release-notifier-action",
+  "repository": "github:gr2m/release-notifier-action",
   "keywords": [
     "github-action"
   ],
