--- a/.github/workflows/test.yml
+++ b/.github/workflows/test.yml
@@ -1,4 +1,10 @@
-on: [push]
+on:
+  push:
+    branches:
+      - main
+  pull_request_target:
+    branches:
+      - dependabot/npm_and_yarn/*
 name: Test
 jobs:
   test:
