--- a/.github/workflows/test.yml
+++ b/.github/workflows/test.yml
@@ -13,7 +13,7 @@ jobs:
       - uses: actions/checkout@v3
       - uses: actions/setup-node@v3
         with:
-          node-version: lts/*
+          node-version: 16 # starting with Node 18, `nock` no longer intercepts requests.
       - run: npm ci
       - run: npm test
   readmeExample:
