--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -8,19 +8,24 @@ jobs:
     name: release
     runs-on: ubuntu-latest
     steps:
-      - uses: actions/checkout@v3
-      - uses: actions/setup-node@v3
+      - uses: actions/checkout@v4
+      - uses: actions/setup-node@v4
         with:
           node-version: lts/*
       - run: npm ci
       - run: npm run build
-      - run: rm .gitignore
+      - run: npm install @semantic-release/git
+      - uses: actions/create-github-app-token@v1
+        id: app-token
+        with:
+          app-id: 474182
+          private-key: ${{ secrets.GR2M_SEMANTIC_RELEASE_PRIVATE_KEY }}
       - run: npx semantic-release
         env:
-          GITHUB_TOKEN: ${{ secrets.GR2M_PAT_FOR_SEMANTIC_RELEASE }}
+          GITHUB_TOKEN: ${{ steps.app-token.outputs.token }}
       - run: >-
           git push
           https://x-access-token:${GITHUB_TOKEN}@github.com/${GITHUB_REPOSITORY}.git
-          HEAD:refs/heads/v1
+          HEAD:refs/heads/v1.x
         env:
           GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
