--- a/package.json
+++ b/package.json
@@ -6,7 +6,7 @@
   "main": "index.js",
   "scripts": {
     "build": "ncc build index.js -o dist",
-    "test": "tap --100 test/*/test.js"
+    "test": "tap test/*/test.js"
   },
   "repository": "github:gr2m/release-notifier-action",
   "keywords": [
