--- a/package.json
+++ b/package.json
@@ -16,8 +16,7 @@
   "license": "MIT",
   "dependencies": {
     "@actions/core": "^1.11.1",
-    "octokit": "^4.1.2",
-    "undici": "^7.7.0"
+    "octokit": "^4.1.2"
   },
   "release": {
     "branches": [
