--- a/action.yml
+++ b/action.yml
@@ -14,5 +14,5 @@ inputs:
     description: "The name of the repository dispatch event, see https://git.io/JTpRo. Defaults to '[owner]/[repo] release', e.g. 'gr2m/release-notifier-action release'"
     required: false
 runs:
-  using: "node16"
-  main: "dist/index.js"
+  using: "node24"
+  main: "dist/main.cjs"
